# bowl

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_main.py
src/: main.py  web.py
src/templates/: board.html  index.html
